--- a/과제/챌린지 07 - CSS를 이용해서 프로필 페이지에 스타일시트  입히기.html
+++ b/과제/챌린지 07 - CSS를 이용해서 프로필 페이지에 스타일시트  입히기.html
@@ -10,7 +10,7 @@
         <img
         width="400"
         height="400"
-        src="../images/이불공장아들.png"
+        src="../과제/과제images/이불공장아들.png"
         alt="이불공장아들 로고">
         <div id="기본소개">
         <p>안녕하세요</p>
