--- a/과제/챌린지 12 - index.html
+++ b/과제/챌린지 12 - index.html
@@ -3,15 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>챌린지 12 홈페이지 화면만 클론해보기 - </title>
     <link href="챌린지 12 - header.css" rel="stylesheet">
     <link href="챌린지 12 - main.css" rel="stylesheet">
     <link href="챌린지 12 - footer.css" rel="stylesheet">
+    <style>
+        *{
+            box-sizing: border-box;
+        }
+        .html{
+            font-size: 16px;
+        }
+        .body{
+            margin: 0;
+        }
+        .flex{
+            display: flexs;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
         <header class="header">
-            <div></div>
+            <div class="header-content flex">
+                <nav class="header-content__nav flex">
+                    <ul>
+                        <li>gmail</li>
+                        <li>이미지</li>
+                        <li>🏴‍☠️</li>
+                        <li>🏁</li>
+                        <li>
+                            <div class="header-content__profile"></div>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </header>
     </div>
 </body>
