--- a/과제/챌린지 12 - index.html
+++ b/과제/챌린지 12 - index.html
@@ -18,7 +18,7 @@
             margin: 0;
         }
         .flex{
-            display: flexs;
+            display: flex;
         }
     </style>
 </head>
